# fallout-equestria

./: .gitignore  CMakeLists.txt  Compiling.md  CutieMarkAquisitionProgram.md  Inventory.md  MSVC2010.md  ProjectHome.md  Races.md  ReputationKarmaFaction.md  Scripting.md  Skills.md  innosetup.iss  ressource.rc  twilidoc.yml
angelscript/: scriptstl.h
angelscript/autowrapper/generator/: generateheader.cpp
angelscript/debugger/: debugger.cpp
angelscript/scriptdictionary/: scriptdictionary.cpp  scriptdictionary.h
angelscript/scripthelper/: scripthelper.cpp
angelscript/scriptstdstring/: scriptstdstring.cpp  scriptstdstring.h
angelscript/weakref/: weakref.cpp
code/editor/: .directory
code/editor/include/: charsheeteditor.h  datatree.hpp  dialogeditor.h  dialoginventoryitem.h  dialognewmap.h  dialognewscript.h  dialogobject.h  (+17 more)
code/tests/: CMakeLists.txt
code/tests/src/: main.cpp  test_data.cpp  test_directory.cpp  test_observatory.cpp  test_pathfinding.cpp  test_serializer.cpp  test_strings.cpp  test_timer.cpp
doc/: blank.html  class_AlertUi.html  class_AnimatedObject.html  class_AstarPathfinding.html  class_AstarPathfinding::FunctorCompareNode.html  class_AstarPathfinding::Node.html  class_Buff.html  class_BuffManager.html  class_CharacterBuff.html  class_Data.html  class_Data::const_my_iterator.html  class_Data::my_iterator.html  class_DataBranch.html  class_DataEngine.html  class_DataTree.html  class_DataTree::Factory.html  class_DataTree::Writers.html  class_DialogAnswers.html  class_DialogController.html  class_DialogModel.html  class_DialogView.html  class_Dices.html  class_Directory.html  class_DynamicObject.html  class_Engine.html  class_Executor.html  class_ExitZone.html  class_FBoundingBox.html  class_Filesystem.html  class_GameConsole.html  class_GameInventory.html  class_GameMainBar.html  class_GameMenu.html  class_GameOptions.html  class_GameTask.html  class_GameTask::LoadLevelParams.html  class_GameUi.html  class_GeneralUi.html  class_ISample.html  class_ISampleInstance.html  (+118 more)
doc/css/: .foundation.css.swp  bootstrap-classic.css  charisma-app.css  foundation.css
doc/docs/: AngelScript::ContextLock.html  AngelScript__ContextLock.html
doc/js/: charisma.js  jquery.anchorHandler.js  project.js
documents/: milestones  msvc_procedure  uml.xmi
documents/3D/: bunker.json  pawnee.json
game_editor/: FoE-Editor  FoE-Editor.pro  charsheeteditor.cpp  charsheeteditor.h  citysplashdialog.cpp  citysplashdialog.h  data.cpp  datatree.hpp  dialogeditor.cpp  dialogeditor.h  dialogeditor.ui  dialoginventoryitem.cpp  dialoginventoryitem.ui  dialognewdynobject.cpp  dialognewdynobject.h  dialognewmap.cpp  dialognewmap.h  dialognewmap.ui  dialognewscript.cpp  dialognewscript.h  dialognewscript.ui  dialogobject.cpp  dialogobject.h  dialogobject.ui  dialogsavemap.cpp  dialogsavemap.h  dialogsavemap.ui  dialogsplashscreen.cpp  dialogsplashscreen.h  dialogwaypointgenerate.cpp  dialogwaypointgenerate.h  dialogwaypointgenerate.ui  divide_and_conquer.hpp  forminternationalization.h  forminternationalization.ui  formkeyvalue.h  functorthread.cpp  functorthread.h  inventoryeditor.cpp  inventoryeditor.h  (+40 more)
include/: .timer.hpp.swp  animatedobject.hpp  animatedobject.yml  as_object.hpp  astar.hpp  character.hpp  dataengine.hpp  datatree.hpp  dialog.hpp  dices.hpp  directory.hpp  gametask.hpp  gametask.yml  gameui.hpp  globals.hpp  i18n.hpp  interact_menu.hpp  inventory.hpp  inventory_ui.hpp  is_game_editor.h  json.hpp  level.hpp  mainmenu.hpp  mapelement.hpp  mouse.hpp  mousecursor.hpp  musicmanager.hpp  newgametask.hpp  npc.hpp  objectnode.hpp  observatory.hpp  options.hpp  panda_lock.hpp  pandagui.hpp  pathfinding.hpp  pipbuck.hpp  playerparty.hpp  quest_manager.hpp  quest_manager.yml  rocket_extension.hpp  (+13 more)
include/Boots/: functorthread.hpp  my_zlib.hpp
include/cmap/: statview.hpp
include/level/: .world.h.kate-swp  character.hpp  chatter_manager.hpp  dialog.hpp  divide_and_conquer.hpp  interact_menu.hpp  inventory.hpp  level.hpp  level.yml  level_zone.hpp  main_script.hpp  mouse.hpp  objectnode.hpp  projectile.hpp  scene_camera.hpp  script_zone.hpp  skill_target.hpp  sun.hpp  waypoint_map.hpp  world.h
include/objects/: door.hpp  dropped_object.hpp  shelf.hpp  stair.hpp
include/ui/: game_console.hpp  game_main_bar.hpp  game_menu.hpp  game_options.hpp  general_ui.hpp  level_ui.hpp  stat_view_rocket.hpp
include/worldmap/: city_splash.hpp  worldmap.hpp
src/: .main.cpp.kate-swp  Makefile  character.cpp  cmake_install.cmake  compile_heightmap.cpp  data.cpp  dataengine.cpp  dialog.cpp  directory.cpp  executor.cpp  gamesave.cpp  gametask.cpp  gameui.cpp  i18n.cpp  interact_menu.cpp  inventory.cpp  inventory_ui.cpp  json.cpp  level.cpp  main.cpp  mainmenu.cpp  mapelement.cpp  mouse.cpp  mousecursor.cpp  musicmanager.cpp  newgametask.cpp  newgametask.cpp~  npc.cpp  objectnode.cpp  option_manager.cpp  pandagui.cpp  pathfinding.cpp  pipbuck.cpp  playerparty.cpp  quest_manager.cpp  rocket_extension.cpp  saveuis.cpp  scene_camera.cpp  script_api.cpp  scriptengine.cpp  (+11 more)
src/Boots/: datetime.cpp  functorthread.cpp  thread.cpp
src/cmap/: rocket_view.cpp  stat_controller.cpp  stat_model.cpp
src/level/: .character.cpp.kate-swp  animated_object.cpp  character.cpp  character_buff.cpp  chatter_manager.cpp  dialog.cpp  diplomacy.cpp  interact_menu.cpp  inventory.cpp  level.cpp  level_zone.cpp  mouse.cpp  objectnode.cpp  projectile.cpp  scene_camera.cpp  script_zone.cpp  skill_target.cpp  waypoint_map.cpp  waypointmodifier.cpp  world.cpp
src/objects/: door.cpp  dropped_object.cpp  shelf.cpp
src/ui/: alert.cpp  console.cpp  gameui.cpp  generalui.cpp  hud.cpp  inventory.cpp  inventory_ui.cpp  levelui.cpp  loading_screen.cpp  main_menu.cpp  mousecursor.cpp  option_manager.cpp  stat_rocket_view.cpp  ui_dialog.cpp
src/worldmap/: .worldmap.cpp.swp  city_splash.cpp  worldmap.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp  shell.cpp  test.cpp  test_directory.cpp  test_json.cpp  test_observatory.cpp  test_pathfinding.cpp  test_serializer.cpp  test_statsheet.cpp  test_strings.cpp
(+405 files in other folders)
